bin_PROGRAMS = apparatus2

GLOBAL_FLAGS := -DGL_GLEXT_PROTOTYPES \
				-DTMS_BACKEND_LINUX \
				-DTMS_BACKEND_PC \
				-DTMS_FAST_MATH \
				-DLUA_COMPAT_MODULE \
				-DLUASOCKET_INET_PTON \
				-D__STDC_FORMAT_MACROS=1 \
				-DSDL_NO_COMPAT \
				-DUNICODE \
				-DHAVE_CONFIG_H

GLOBAL_FLAGS += -I../src/SDL-pc/SDL/include -I../src/tms/backends/linux/ \
				-I../src/SDL_ttf/ -I../src/SDL_mixer/ -I../src/SDL_image/ -I../src/freetype/builds -I../src/freetype/include \
				-I../src/src/ -I../src/ -I../src/jpeg/ -I../src/png/ -I../src/zlib/ -I/usr/include/ \
				-I../src/curl-7.32.0/lib/ -I../src/curl-7.32.0/include/ \
				-I../src/include/ \
				-I../src/gtk-undo \
				-DGLEW_STATIC \
				${GTK_CFLAGS} \
				-I../src/lua/src/

apparatus2_CFLAGS = ${GLOBAL_FLAGS} -std=gnu99 -DFT2_BUILD_LIBRARY\
	-DLOAD_JPG -DLOAD_PNG -DLOAD_BMP -DLOAD_GIF -DLOAD_LBM \
	-DLOAD_PCX -DLOAD_PNM -DLOAD_TGA -DLOAD_XCF -DLOAD_XPM \
	-DLOAD_XV
apparatus2_CXXFLAGS = ${GLOBAL_FLAGS}
apparatus2_LDADD = -lz -ldl -lGL -lpthread -lX11 -lXi -lrt
apparatus2_LDFLAGS = ${GTK_LIBS}

apparatus2_SOURCES = \
../src/jpeg/jaricom.c \
../src/jpeg/jcapimin.c \
../src/jpeg/jcapistd.c \
../src/jpeg/jccoefct.c \
../src/jpeg/jccolor.c \
../src/jpeg/jcdctmgr.c \
../src/jpeg/jchuff.c \
../src/jpeg/jcinit.c \
../src/jpeg/jcmainct.c \
../src/jpeg/jcmarker.c \
../src/jpeg/jcmaster.c \
../src/jpeg/jcomapi.c \
../src/jpeg/jcparam.c \
../src/jpeg/jcprepct.c \
../src/jpeg/jcsample.c \
../src/jpeg/jdapimin.c \
../src/jpeg/jdapistd.c \
../src/jpeg/jdatadst.c \
../src/jpeg/jdatasrc.c \
../src/jpeg/jcarith.c \
../src/jpeg/jdarith.c \
../src/jpeg/jdcoefct.c \
../src/jpeg/jdcolor.c \
../src/jpeg/jddctmgr.c \
../src/jpeg/jdhuff.c \
../src/jpeg/jdinput.c \
../src/jpeg/jdmainct.c \
../src/jpeg/jdmarker.c \
../src/jpeg/jdmaster.c \
../src/jpeg/jdmerge.c \
../src/jpeg/jdpostct.c \
../src/jpeg/jdsample.c \
../src/jpeg/jerror.c \
../src/jpeg/jfdctflt.c \
../src/jpeg/jfdctfst.c \
../src/jpeg/jfdctint.c \
../src/jpeg/jidctflt.c \
../src/jpeg/jidctfst.c \
../src/jpeg/jidctint.c \
../src/jpeg/jmemmgr.c \
../src/jpeg/jmemnobs.c \
../src/jpeg/jquant1.c \
../src/jpeg/jquant2.c \
../src/jpeg/jutils.c \
\
../src/png/png.c \
../src/png/pngerror.c \
../src/png/pngget.c \
../src/png/pngmem.c \
../src/png/pngpread.c \
../src/png/pngread.c \
../src/png/pngrio.c \
../src/png/pngrtran.c \
../src/png/pngrutil.c \
../src/png/pngset.c \
../src/png/pngtrans.c \
../src/png/pngwio.c \
../src/png/pngwrite.c \
../src/png/pngwtran.c \
../src/png/pngwutil.c \
\
../src/freetype/src/autofit/autofit.c \
../src/freetype/src/base/ftbase.c \
../src/freetype/src/base/ftbbox.c \
../src/freetype/src/base/ftbdf.c \
../src/freetype/src/base/ftbitmap.c \
../src/freetype/src/base/ftcid.c \
../src/freetype/src/base/ftdebug.c \
../src/freetype/src/base/ftfstype.c \
../src/freetype/src/base/ftgasp.c \
../src/freetype/src/base/ftglyph.c \
../src/freetype/src/base/ftgxval.c \
../src/freetype/src/base/ftinit.c \
../src/freetype/src/base/ftlcdfil.c \
../src/freetype/src/base/ftmm.c \
../src/freetype/src/base/ftotval.c \
../src/freetype/src/base/ftpatent.c \
../src/freetype/src/base/ftpfr.c \
../src/freetype/src/base/ftstroke.c \
../src/freetype/src/base/ftsynth.c \
../src/freetype/src/base/ftsystem.c \
../src/freetype/src/base/fttype1.c \
../src/freetype/src/base/ftwinfnt.c \
../src/freetype/src/base/ftxf86.c \
../src/freetype/src/bdf/bdf.c \
../src/freetype/src/bzip2/ftbzip2.c \
../src/freetype/src/cache/ftcache.c \
../src/freetype/src/cff/cff.c \
../src/freetype/src/cid/type1cid.c \
../src/freetype/src/gxvalid/gxvalid.c \
../src/freetype/src/gzip/ftgzip.c \
../src/freetype/src/lzw/ftlzw.c \
../src/freetype/src/otvalid/otvalid.c \
../src/freetype/src/pcf/pcf.c \
../src/freetype/src/pfr/pfr.c \
../src/freetype/src/psaux/psaux.c \
../src/freetype/src/pshinter/pshinter.c \
../src/freetype/src/psnames/psnames.c \
../src/freetype/src/raster/raster.c \
../src/freetype/src/sfnt/sfnt.c \
../src/freetype/src/smooth/smooth.c \
../src/freetype/src/truetype/truetype.c \
../src/freetype/src/type1/type1.c \
../src/freetype/src/type42/type42.c \
../src/freetype/src/winfonts/winfnt.c \
../src/SDL_image/SDL2_rotozoom.c \
../src/SDL_image/IMG_bmp.c \
../src/SDL_image/IMG.c \
../src/SDL_image/IMG_gif.c \
../src/SDL_image/IMG_jpg.c \
../src/SDL_image/IMG_lbm.c \
../src/SDL_image/IMG_pcx.c \
../src/SDL_image/IMG_png.c \
../src/SDL_image/IMG_pnm.c \
../src/SDL_image/IMG_tga.c \
../src/SDL_image/IMG_tif.c \
../src/SDL_image/IMG_webp.c \
../src/SDL_image/IMG_xcf.c \
../src/SDL_image/IMG_xpm.c \
../src/SDL_image/IMG_xv.c \
../src/SDL_image/IMG_xxx.c \
../src/SDL_ttf/SDL_ttf.c \
../src/SDL_mixer/dynamic_flac.c \
../src/SDL_mixer/dynamic_fluidsynth.c \
../src/SDL_mixer/dynamic_mod.c \
../src/SDL_mixer/dynamic_modplug.c \
../src/SDL_mixer/dynamic_mp3.c \
../src/SDL_mixer/dynamic_ogg.c \
../src/SDL_mixer/effect_position.c \
../src/SDL_mixer/effects_internal.c \
../src/SDL_mixer/effect_stereoreverse.c \
../src/SDL_mixer/fluidsynth.c \
../src/SDL_mixer/load_aiff.c \
../src/SDL_mixer/load_flac.c \
../src/SDL_mixer/load_ogg.c \
../src/SDL_mixer/load_voc.c \
../src/SDL_mixer/mixer.c \
../src/SDL_mixer/music.c \
../src/SDL_mixer/music_cmd.c \
../src/SDL_mixer/music_flac.c \
../src/SDL_mixer/music_mad.c \
../src/SDL_mixer/music_mod.c \
../src/SDL_mixer/music_modplug.c \
../src/SDL_mixer/music_ogg.c \
../src/SDL_mixer/wavestream.c \
\
../src/tms/core/atlas.c \
../src/tms/core/backend.c \
../src/tms/core/batch3d.c \
../src/tms/core/batch.c \
../src/tms/core/builtin-shaders.inc.c \
../src/tms/core/camera.c \
../src/tms/core/ddraw.c \
../src/tms/core/entity.c \
../src/tms/core/event.c \
../src/tms/core/framebuffer.c \
../src/tms/core/gbuffer.c \
../src/tms/core/graph.c \
../src/tms/core/hdrbuffer.c \
../src/tms/core/material.c \
../src/tms/core/mesh.c \
../src/tms/core/meshfactory.c \
../src/tms/core/model.c \
../src/tms/core/pipeline.c \
../src/tms/core/program.c \
../src/tms/core/scene.c \
../src/tms/core/screen.c \
../src/tms/core/shader.c \
../src/tms/core/surface.c \
../src/tms/core/texture.c \
../src/tms/core/tms.c \
../src/tms/core/varray.c \
../src/tms/core/wdg.c \
../src/tms/math/intersect.c \
../src/tms/math/lorenz.c \
../src/tms/math/math.c \
../src/tms/math/rk4.c \
../src/tms/util/hash.c \
../src/tms/util/list.c \
\
../src/tms/backends/linux/main.cc \
../src/GLEW/glew.c \
../src/tms/bindings/cpp/cpp.cc \
../src/tms/modules/3ds/3ds.c \
\
../src/SDL-pc/SDL/src/SDL.c \
../src/SDL-pc/SDL/src/SDL_assert.c \
../src/SDL-pc/SDL/src/SDL_error.c \
../src/SDL-pc/SDL/src/SDL_hints.c \
../src/SDL-pc/SDL/src/SDL_log.c \
../src/SDL-pc/SDL/src/atomic/SDL_atomic.c \
../src/SDL-pc/SDL/src/atomic/SDL_spinlock.c \
../src/SDL-pc/SDL/src/audio/SDL_audio.c \
../src/SDL-pc/SDL/src/audio/SDL_audiocvt.c \
../src/SDL-pc/SDL/src/audio/SDL_audiodev.c \
../src/SDL-pc/SDL/src/audio/SDL_audiotypecvt.c \
../src/SDL-pc/SDL/src/audio/SDL_mixer.c \
../src/SDL-pc/SDL/src/audio/SDL_wave.c \
../src/SDL-pc/SDL/src/cpuinfo/SDL_cpuinfo.c \
../src/SDL-pc/SDL/src/dynapi/SDL_dynapi.c \
../src/SDL-pc/SDL/src/events/SDL_clipboardevents.c \
../src/SDL-pc/SDL/src/events/SDL_dropevents.c \
../src/SDL-pc/SDL/src/events/SDL_events.c \
../src/SDL-pc/SDL/src/events/SDL_gesture.c \
../src/SDL-pc/SDL/src/events/SDL_keyboard.c \
../src/SDL-pc/SDL/src/events/SDL_mouse.c \
../src/SDL-pc/SDL/src/events/SDL_quit.c \
../src/SDL-pc/SDL/src/events/SDL_touch.c \
../src/SDL-pc/SDL/src/events/SDL_windowevents.c \
../src/SDL-pc/SDL/src/file/SDL_rwops.c \
../src/SDL-pc/SDL/src/haptic/SDL_haptic.c \
../src/SDL-pc/SDL/src/joystick/SDL_gamecontroller.c \
../src/SDL-pc/SDL/src/joystick/SDL_joystick.c \
../src/SDL-pc/SDL/src/libm/e_atan2.c \
../src/SDL-pc/SDL/src/libm/e_log.c \
../src/SDL-pc/SDL/src/libm/e_pow.c \
../src/SDL-pc/SDL/src/libm/e_rem_pio2.c \
../src/SDL-pc/SDL/src/libm/e_sqrt.c \
../src/SDL-pc/SDL/src/libm/k_cos.c \
../src/SDL-pc/SDL/src/libm/k_rem_pio2.c \
../src/SDL-pc/SDL/src/libm/k_sin.c \
../src/SDL-pc/SDL/src/libm/s_atan.c \
../src/SDL-pc/SDL/src/libm/s_copysign.c \
../src/SDL-pc/SDL/src/libm/s_cos.c \
../src/SDL-pc/SDL/src/libm/s_fabs.c \
../src/SDL-pc/SDL/src/libm/s_floor.c \
../src/SDL-pc/SDL/src/libm/s_scalbn.c \
../src/SDL-pc/SDL/src/libm/s_sin.c \
../src/SDL-pc/SDL/src/power/SDL_power.c \
../src/SDL-pc/SDL/src/render/SDL_render.c \
../src/SDL-pc/SDL/src/render/SDL_yuv_mmx.c \
../src/SDL-pc/SDL/src/render/SDL_yuv_sw.c \
../src/SDL-pc/SDL/src/render/direct3d/SDL_render_d3d.c \
../src/SDL-pc/SDL/src/render/opengl/SDL_render_gl.c \
../src/SDL-pc/SDL/src/render/opengl/SDL_shaders_gl.c \
../src/SDL-pc/SDL/src/render/psp/SDL_render_psp.c \
../src/SDL-pc/SDL/src/render/software/SDL_blendfillrect.c \
../src/SDL-pc/SDL/src/render/software/SDL_blendline.c \
../src/SDL-pc/SDL/src/render/software/SDL_blendpoint.c \
../src/SDL-pc/SDL/src/render/software/SDL_drawline.c \
../src/SDL-pc/SDL/src/render/software/SDL_drawpoint.c \
../src/SDL-pc/SDL/src/render/software/SDL_render_sw.c \
../src/SDL-pc/SDL/src/render/software/SDL_rotate.c \
../src/SDL-pc/SDL/src/stdlib/SDL_getenv.c \
../src/SDL-pc/SDL/src/stdlib/SDL_iconv.c \
../src/SDL-pc/SDL/src/stdlib/SDL_malloc.c \
../src/SDL-pc/SDL/src/stdlib/SDL_qsort.c \
../src/SDL-pc/SDL/src/stdlib/SDL_stdlib.c \
../src/SDL-pc/SDL/src/stdlib/SDL_string.c \
../src/SDL-pc/SDL/src/thread/SDL_thread.c \
../src/SDL-pc/SDL/src/timer/SDL_timer.c \
../src/SDL-pc/SDL/src/video/SDL_RLEaccel.c \
../src/SDL-pc/SDL/src/video/SDL_blit.c \
../src/SDL-pc/SDL/src/video/SDL_blit_0.c \
../src/SDL-pc/SDL/src/video/SDL_blit_1.c \
../src/SDL-pc/SDL/src/video/SDL_blit_A.c \
../src/SDL-pc/SDL/src/video/SDL_blit_N.c \
../src/SDL-pc/SDL/src/video/SDL_blit_auto.c \
../src/SDL-pc/SDL/src/video/SDL_blit_copy.c \
../src/SDL-pc/SDL/src/video/SDL_blit_slow.c \
../src/SDL-pc/SDL/src/video/SDL_bmp.c \
../src/SDL-pc/SDL/src/video/SDL_clipboard.c \
../src/SDL-pc/SDL/src/video/SDL_egl.c \
../src/SDL-pc/SDL/src/video/SDL_fillrect.c \
../src/SDL-pc/SDL/src/video/SDL_pixels.c \
../src/SDL-pc/SDL/src/video/SDL_rect.c \
../src/SDL-pc/SDL/src/video/SDL_shape.c \
../src/SDL-pc/SDL/src/video/SDL_stretch.c \
../src/SDL-pc/SDL/src/video/SDL_surface.c \
../src/SDL-pc/SDL/src/video/SDL_video.c \
../src/SDL-pc/SDL/src/video/dummy/SDL_nullevents.c \
../src/SDL-pc/SDL/src/video/dummy/SDL_nullframebuffer.c \
../src/SDL-pc/SDL/src/video/dummy/SDL_nullvideo.c \
../src/SDL-pc/SDL/src/audio/disk/SDL_diskaudio.c \
../src/SDL-pc/SDL/src/audio/dummy/SDL_dummyaudio.c \
../src/SDL-pc/SDL/src/loadso/dlopen/SDL_sysloadso.c \
../src/SDL-pc/SDL/src/audio/dsp/SDL_dspaudio.c \
../src/SDL-pc/SDL/src/audio/alsa/SDL_alsa_audio.c \
../src/SDL-pc/SDL/src/audio/pulseaudio/SDL_pulseaudio.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11clipboard.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11dyn.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11events.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11framebuffer.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11keyboard.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11messagebox.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11modes.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11mouse.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11opengl.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11opengles.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11shape.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11touch.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11video.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11window.c \
../src/SDL-pc/SDL/src/video/x11/SDL_x11xinput2.c \
../src/SDL-pc/SDL/src/video/x11/edid-parse.c \
../src/SDL-pc/SDL/src/video/x11/imKStoUCS.c \
../src/SDL-pc/SDL/src/thread/pthread/SDL_systhread.c \
../src/SDL-pc/SDL/src/thread/pthread/SDL_syssem.c \
../src/SDL-pc/SDL/src/thread/pthread/SDL_sysmutex.c \
../src/SDL-pc/SDL/src/thread/pthread/SDL_syscond.c \
../src/SDL-pc/SDL/src/thread/pthread/SDL_systls.c \
../src/SDL-pc/SDL/src/joystick/linux/SDL_sysjoystick.c \
../src/SDL-pc/SDL/src/haptic/linux/SDL_syshaptic.c \
../src/SDL-pc/SDL/src/power/linux/SDL_syspower.c \
../src/SDL-pc/SDL/src/filesystem/unix/SDL_sysfilesystem.c \
../src/SDL-pc/SDL/src/timer/unix/SDL_systimer.c \
../src/SDL-pc/SDL/src/core/linux/SDL_udev.c \
\
../src/gtk-undo/undo_manager.c \
../src/gtk-undo/undo_view.c \
\
../src/lua/src/eris.c \
../src/lua/src/lapi.c \
../src/lua/src/lauxlib.c \
../src/lua/src/lbaselib.c \
../src/lua/src/lbitlib.c \
../src/lua/src/lcode.c \
../src/lua/src/lcorolib.c \
../src/lua/src/lctype.c \
../src/lua/src/ldblib.c \
../src/lua/src/ldebug.c \
../src/lua/src/ldo.c \
../src/lua/src/ldump.c \
../src/lua/src/lfunc.c \
../src/lua/src/lgc.c \
../src/lua/src/linit.c \
../src/lua/src/liolib.c \
../src/lua/src/llex.c \
../src/lua/src/lmathlib.c \
../src/lua/src/lmem.c \
../src/lua/src/loadlib.c \
../src/lua/src/lobject.c \
../src/lua/src/lopcodes.c \
../src/lua/src/loslib.c \
../src/lua/src/lparser.c \
../src/lua/src/lstate.c \
../src/lua/src/lstring.c \
../src/lua/src/lstrlib.c \
../src/lua/src/ltable.c \
../src/lua/src/ltablib.c \
../src/lua/src/ltm.c \
../src/lua/src/lundump.c \
../src/lua/src/lvm.c \
../src/lua/src/lzio.c \
\
../src/luasocket/src/auxiliar.c \
../src/luasocket/src/buffer.c \
../src/luasocket/src/except.c \
../src/luasocket/src/inet.c \
../src/luasocket/src/io.c \
../src/luasocket/src/luasocket.c \
../src/luasocket/src/mime.c \
../src/luasocket/src/options.c \
../src/luasocket/src/select.c \
../src/luasocket/src/tcp.c \
../src/luasocket/src/timeout.c \
../src/luasocket/src/udp.c \
../src/luasocket/src/usocket.c \
../src/luasocket/src/unix.c \
\
../src/src/fluid.cc \
../src/src/oilrig.cc \
../src/src/factory.cc \
../src/src/timectrl.cc \
../src/src/egraph.cc \
../src/src/ball.cc \
../src/src/beam.cc \
../src/src/breadboard.cc \
../src/src/button.cc \
../src/src/cable.cc \
../src/src/command.cc \
../src/src/composable.cc \
../src/src/cup.cc \
../src/src/cylinder.cc \
../src/src/debugdraw.cc \
../src/src/edevice.cc \
../src/src/entity.cc \
../src/src/game.cc \
../src/src/game-message.cc \
../src/src/game-graph.cc \
../src/src/game-edit.cc \
../src/src/game-gui.cc \
../src/src/adventure.cc \
../src/src/gear.cc \
../src/src/magnet.cc \
../src/src/rack.cc \
../src/src/rail.cc \
../src/src/generator.cc \
../src/src/panel.cc \
../src/src/game-panel-edit.cc \
../src/src/gui.cc \
../src/src/goal.cc \
../src/src/group.cc \
../src/src/i0o1gate.cc \
../src/src/i1o1gate.cc \
../src/src/fxemitter.cc \
../src/src/i2o1gate.cc \
../src/src/backpack.cc \
../src/src/progress.cc \
../src/src/pkgwarp.cc \
../src/src/main.cc \
../src/src/material.cc \
../src/src/object_finder.cc \
../src/src/sincos.cc \
../src/src/eatan2.cc \
../src/src/pointer.cc \
../src/src/model.cc \
../src/src/object_factory.cc \
../src/src/soundmanager.cc \
../src/src/robot.cc \
../src/src/checkpoint.cc \
../src/src/rope.cc \
../src/src/connection.cc \
../src/src/settings.cc \
../src/src/shelf.cc \
../src/src/solver.cc \
../src/src/solver_ingame.cc \
../src/src/stabilizer.cc \
../src/src/sticky.cc \
../src/src/tester.cc \
../src/src/trampoline.cc \
../src/src/wheel.cc \
../src/src/wmotor.cc \
../src/src/motor.cc \
../src/src/lmotor.cc \
../src/src/magconn.cc \
../src/src/switch.cc \
../src/src/ledbuffer.cc \
../src/src/spritebuffer.cc \
../src/src/fluidbuffer.cc \
../src/src/linebuffer.cc \
../src/src/seesaw.cc \
../src/src/pivot.cc \
../src/src/gyroscope.cc \
../src/src/tiltmeter.cc \
../src/src/rocket.cc \
../src/src/ragdoll.cc \
../src/src/pkgman.cc \
../src/src/menu_shared.cc \
../src/src/menu-base.cc \
../src/src/menu_pkg.cc \
../src/src/menu_main.cc \
../src/src/menu_create.cc \
../src/src/menu-play.cc \
../src/src/simplebg.cc \
../src/src/savepng.c \
../src/src/world.cc \
../src/src/terrain.cc \
../src/src/chunk.cc \
../src/src/chunk_window.cc \
../src/src/chunk_preloader.cc \
../src/src/gentype.cc \
../src/src/noise.cc \
../src/src/rand.c \
../src/src/crc.cc \
../src/src/worker.cc \
../src/src/pipeline.cc \
../src/src/splank.cc \
../src/src/clip.cc \
../src/src/gearbox.cc \
../src/src/game-gearbox-edit.cc \
../src/src/ctrlmini.cc \
../src/src/ctrlservo.cc \
../src/src/battery.cc \
../src/src/ctrlfplus.cc \
../src/src/damper.cc \
../src/src/gameman.cc \
../src/src/ctrlpass.cc \
../src/src/box.cc \
../src/src/basepixel.cc \
../src/src/tpixel.cc \
../src/src/pixel.cc \
../src/src/ui.cc \
../src/src/rubberband.cc \
../src/src/loading_screen.cc \
../src/src/corner.cc \
../src/src/scanner.cc \
../src/src/proximitysensor.cc \
../src/src/ysplitter.cc \
../src/src/objectfield.cc \
../src/src/dragfield.cc \
../src/src/emitter.cc \
../src/src/explosive.cc \
../src/src/absorber.cc \
../src/src/conveyor.cc \
../src/src/resistor.cc \
../src/src/angulardamper.cc \
../src/src/impact_sensor.cc \
../src/src/gravityman.cc \
../src/src/speaker.cc \
../src/src/jumper.cc \
../src/src/spikes.cc \
../src/src/screenshot_marker.cc \
../src/src/receiver.cc \
../src/src/transmitter.cc \
../src/src/fan.cc \
../src/src/timer.cc \
../src/src/mini_transmitter.cc \
../src/src/robot_base.cc \
../src/src/spikebot.cc \
../src/src/companion.cc \
../src/src/bomber.cc \
../src/src/robot_parts.cc \
../src/src/lobber.cc \
../src/src/minibot.cc \
../src/src/angularvelmeter.cc \
../src/src/display.cc \
../src/src/velmeter.cc \
../src/src/weight.cc \
../src/src/prompt.cc \
../src/src/i2o0gate.cc \
../src/src/escript.cc \
../src/src/item.cc \
../src/src/crane.cc \
../src/src/robotman.cc \
../src/src/scup.cc \
../src/src/faction.cc \
../src/src/mood.cc \
../src/src/repair_station.cc \
../src/src/anchor.cc \
../src/src/ladder.cc \
../src/src/plant.cc \
../src/src/resource.cc \
../src/src/vendor.cc \
../src/src/creature.cc \
../src/src/animal.cc \
../src/src/soundman.cc \
../src/src/polygon.cc \
../src/src/textbuffer.cc \
../src/src/grid.cc \
../src/src/wplug.cc \
../src/src/cursorfield.cc \
../src/src/i1o0gate.cc \
../src/src/iomiscgate.cc \
../src/src/widget_manager.cc \
../src/src/font.cc \
../src/src/text.cc \
../src/src/pscreen.cc \
../src/src/misc.cc \
../src/src/levelman.cc \
../src/src/tiles.cc \
../src/src/activator.cc \
../src/src/treasure_chest.cc \
../src/src/decorations.cc \
\
../src/src/Box2D/Particle/b2Particle.cc \
../src/src/Box2D/Particle/b2ParticleGroup.cc \
../src/src/Box2D/Particle/b2ParticleSystem.cc \
../src/src/Box2D/Particle/b2VoronoiDiagram.cc \
../src/src/Box2D/Dynamics/b2Body.cc \
../src/src/Box2D/Dynamics/b2ContactManager.cc \
../src/src/Box2D/Dynamics/b2Fixture.cc \
../src/src/Box2D/Dynamics/b2Island.cc \
../src/src/Box2D/Dynamics/b2WorldCallbacks.cc \
../src/src/Box2D/Dynamics/b2World.cc \
../src/src/Box2D/Collision/b2BroadPhase.cc \
../src/src/Box2D/Collision/b2CollideCircle.cc \
../src/src/Box2D/Collision/b2CollideEdge.cc \
../src/src/Box2D/Collision/b2CollidePolygon.cc \
../src/src/Box2D/Collision/b2Collision.cc \
../src/src/Box2D/Collision/b2Distance.cc \
../src/src/Box2D/Collision/b2DynamicTree.cc \
../src/src/Box2D/Collision/b2TimeOfImpact.cc \
../src/src/Box2D/Collision/Shapes/b2ChainShape.cc \
../src/src/Box2D/Collision/Shapes/b2CircleShape.cc \
../src/src/Box2D/Collision/Shapes/b2EdgeShape.cc \
../src/src/Box2D/Collision/Shapes/b2PolygonShape.cc \
../src/src/Box2D/Common/b2BlockAllocator.cc \
../src/src/Box2D/Common/b2Draw.cc \
../src/src/Box2D/Common/b2Math.cc \
../src/src/Box2D/Common/b2Settings.cc \
../src/src/Box2D/Common/b2StackAllocator.cc \
../src/src/Box2D/Common/b2Timer.cc \
../src/src/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2CircleContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2Contact.cc \
../src/src/Box2D/Dynamics/Contacts/b2ContactSolver.cc \
../src/src/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2PolygonContact.cc \
../src/src/Box2D/Dynamics/Joints/b2DistanceJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2FrictionJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2GearJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2Joint.cc \
../src/src/Box2D/Dynamics/Joints/b2MotorJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2MouseJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2PrismaticJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2PulleyJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2RevoluteJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2PivotJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2RopeJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2WeldJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2WheelJoint.cc \
../src/curl-7.32.0/lib/file.c ../src/curl-7.32.0/lib/timeval.c ../src/curl-7.32.0/lib/base64.c ../src/curl-7.32.0/lib/hostip.c ../src/curl-7.32.0/lib/progress.c ../src/curl-7.32.0/lib/formdata.c	\
  ../src/curl-7.32.0/lib/cookie.c ../src/curl-7.32.0/lib/http.c ../src/curl-7.32.0/lib/sendf.c ../src/curl-7.32.0/lib/ftp.c ../src/curl-7.32.0/lib/url.c ../src/curl-7.32.0/lib/dict.c ../src/curl-7.32.0/lib/if2ip.c ../src/curl-7.32.0/lib/speedcheck.c	\
  ../src/curl-7.32.0/lib/ldap.c ../src/curl-7.32.0/lib/ssluse.c ../src/curl-7.32.0/lib/version.c ../src/curl-7.32.0/lib/getenv.c ../src/curl-7.32.0/lib/escape.c ../src/curl-7.32.0/lib/mprintf.c ../src/curl-7.32.0/lib/telnet.c	\
  ../src/curl-7.32.0/lib/netrc.c ../src/curl-7.32.0/lib/getinfo.c ../src/curl-7.32.0/lib/transfer.c ../src/curl-7.32.0/lib/strequal.c ../src/curl-7.32.0/lib/easy.c ../src/curl-7.32.0/lib/security.c ../src/curl-7.32.0/lib/krb4.c	\
  ../src/curl-7.32.0/lib/curl_fnmatch.c ../src/curl-7.32.0/lib/fileinfo.c ../src/curl-7.32.0/lib/ftplistparser.c ../src/curl-7.32.0/lib/wildcard.c ../src/curl-7.32.0/lib/krb5.c		\
  ../src/curl-7.32.0/lib/memdebug.c ../src/curl-7.32.0/lib/http_chunks.c ../src/curl-7.32.0/lib/strtok.c ../src/curl-7.32.0/lib/connect.c ../src/curl-7.32.0/lib/llist.c ../src/curl-7.32.0/lib/hash.c ../src/curl-7.32.0/lib/multi.c	\
  ../src/curl-7.32.0/lib/content_encoding.c ../src/curl-7.32.0/lib/share.c ../src/curl-7.32.0/lib/http_digest.c ../src/curl-7.32.0/lib/md4.c ../src/curl-7.32.0/lib/md5.c	\
  ../src/curl-7.32.0/lib/http_negotiate.c ../src/curl-7.32.0/lib/inet_pton.c ../src/curl-7.32.0/lib/strtoofft.c ../src/curl-7.32.0/lib/strerror.c ../src/curl-7.32.0/lib/amigaos.c		\
  ../src/curl-7.32.0/lib/hostasyn.c ../src/curl-7.32.0/lib/hostip4.c ../src/curl-7.32.0/lib/hostip6.c ../src/curl-7.32.0/lib/hostsyn.c ../src/curl-7.32.0/lib/inet_ntop.c ../src/curl-7.32.0/lib/parsedate.c	\
  ../src/curl-7.32.0/lib/select.c ../src/curl-7.32.0/lib/gtls.c ../src/curl-7.32.0/lib/sslgen.c ../src/curl-7.32.0/lib/tftp.c ../src/curl-7.32.0/lib/splay.c ../src/curl-7.32.0/lib/strdup.c ../src/curl-7.32.0/lib/socks.c ../src/curl-7.32.0/lib/ssh.c ../src/curl-7.32.0/lib/nss.c	\
  ../src/curl-7.32.0/lib/qssl.c ../src/curl-7.32.0/lib/rawstr.c ../src/curl-7.32.0/lib/curl_addrinfo.c ../src/curl-7.32.0/lib/socks_gssapi.c ../src/curl-7.32.0/lib/socks_sspi.c		\
  ../src/curl-7.32.0/lib/curl_sspi.c ../src/curl-7.32.0/lib/slist.c ../src/curl-7.32.0/lib/nonblock.c ../src/curl-7.32.0/lib/curl_memrchr.c ../src/curl-7.32.0/lib/imap.c ../src/curl-7.32.0/lib/pop3.c ../src/curl-7.32.0/lib/smtp.c	\
  ../src/curl-7.32.0/lib/pingpong.c ../src/curl-7.32.0/lib/rtsp.c ../src/curl-7.32.0/lib/curl_threads.c ../src/curl-7.32.0/lib/warnless.c ../src/curl-7.32.0/lib/hmac.c ../src/curl-7.32.0/lib/polarssl.c		\
  ../src/curl-7.32.0/lib/polarssl_threadlock.c ../src/curl-7.32.0/lib/curl_rtmp.c ../src/curl-7.32.0/lib/openldap.c ../src/curl-7.32.0/lib/curl_gethostname.c	\
  ../src/curl-7.32.0/lib/gopher.c ../src/curl-7.32.0/lib/axtls.c ../src/curl-7.32.0/lib/idn_win32.c ../src/curl-7.32.0/lib/http_negotiate_sspi.c ../src/curl-7.32.0/lib/cyassl.c		\
  ../src/curl-7.32.0/lib/http_proxy.c ../src/curl-7.32.0/lib/non-ascii.c ../src/curl-7.32.0/lib/asyn-ares.c ../src/curl-7.32.0/lib/asyn-thread.c ../src/curl-7.32.0/lib/curl_gssapi.c	\
  ../src/curl-7.32.0/lib/curl_ntlm.c ../src/curl-7.32.0/lib/curl_ntlm_wb.c ../src/curl-7.32.0/lib/curl_ntlm_core.c ../src/curl-7.32.0/lib/curl_ntlm_msgs.c		\
  ../src/curl-7.32.0/lib/curl_sasl.c ../src/curl-7.32.0/lib/curl_schannel.c ../src/curl-7.32.0/lib/curl_multibyte.c ../src/curl-7.32.0/lib/curl_darwinssl.c		\
  ../src/curl-7.32.0/lib/hostcheck.c ../src/curl-7.32.0/lib/bundles.c ../src/curl-7.32.0/lib/conncache.c ../src/curl-7.32.0/lib/pipeline.c ../src/curl-7.32.0/lib/dotdot.c ../src/curl-7.32.0/lib/x509asn1.c      \
  ../src/curl-7.32.0/lib/gskit.c


