AC_PREREQ(2.59)
AC_INIT([principia], 1, [sdac@bithack.se])
AM_INIT_AUTOMAKE([subdir-objects foreign])
AM_SILENT_RULES([yes])

AC_PROG_CC
AC_PROG_CXX

PKG_CHECK_MODULES(GTK, gtk+-3.0 gdk-3.0)
PKG_CHECK_MODULES(GTK_SOURCEVIEW, gtksourceview-4)
PKG_CHECK_MODULES(SDL2, sdl2 >= 2.0.0)
PKG_CHECK_MODULES(SDL2_TTF, SDL2_ttf >= 2.0.0)
PKG_CHECK_MODULES(SDL2_GFX, SDL2_gfx >= 1.0.0)
PKG_CHECK_MODULES(SDL2_IMAGE, SDL2_image >= 2.0.0)
PKG_CHECK_MODULES(SDL2_MIXER, SDL2_mixer >= 2.0.0)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
