bin_PROGRAMS = principia_ss

GLOBAL_FLAGS := -DGL_GLEXT_PROTOTYPES \
				-DTMS_BACKEND_LINUX \
				-DTMS_BACKEND_LINUX_SS \
				-DTMS_BACKEND_PC \
				-DTMS_FAST_MATH \
				-DLUA_COMPAT_MODULE \
				-DLUASOCKET_INET_PTON \
				-D__STDC_FORMAT_MACROS=1 \
				-DSDL_NO_COMPAT \
				-DUNICODE \
				-DNO_UI

GLOBAL_FLAGS += -I../src/tms/backends/screenshot-linux/ \
                -I../src/src/ -I../src/ -I/usr/include/ \
				-I/usr/include/SDL2/ -I/usr/include/freetype2/ \
				`curl-config --cflags --libs` \
				-I../src/lua/src \
				-I../src/include

principia_ss_CFLAGS = ${GLOBAL_FLAGS} -std=gnu99 -DFT2_BUILD_LIBRARY\
    -DLOAD_JPG -DLOAD_PNG -DLOAD_BMP -DLOAD_GIF -DLOAD_LBM \
    -DLOAD_PCX -DLOAD_PNM -DLOAD_TGA -DLOAD_XCF -DLOAD_XPM \
    -DLOAD_XV
principia_ss_CXXFLAGS = ${GLOBAL_FLAGS}
principia_ss_LDFLAGS = -rdynamic
principia_ss_LDADD = -lz -ldl -lGL -lpthread -lX11 -lXi -ljpeg -lpng -lfreetype -lSDL2 -lSDL2_ttf -lSDL2_mixer -lSDL2_image -lSDL2_gfx

principia_ss_SOURCES = \
../src/lua/src/lapi.c \
../src/lua/src/lauxlib.c \
../src/lua/src/lbaselib.c \
../src/lua/src/lbitlib.c \
../src/lua/src/lcode.c \
../src/lua/src/lcorolib.c \
../src/lua/src/lctype.c \
../src/lua/src/ldblib.c \
../src/lua/src/ldebug.c \
../src/lua/src/ldo.c \
../src/lua/src/ldump.c \
../src/lua/src/lfunc.c \
../src/lua/src/lgc.c \
../src/lua/src/linit.c \
../src/lua/src/liolib.c \
../src/lua/src/llex.c \
../src/lua/src/lmathlib.c \
../src/lua/src/lmem.c \
../src/lua/src/loadlib.c \
../src/lua/src/lobject.c \
../src/lua/src/lopcodes.c \
../src/lua/src/loslib.c \
../src/lua/src/lparser.c \
../src/lua/src/lstate.c \
../src/lua/src/lstring.c \
../src/lua/src/lstrlib.c \
../src/lua/src/ltable.c \
../src/lua/src/ltablib.c \
../src/lua/src/ltm.c \
../src/lua/src/lundump.c \
../src/lua/src/lvm.c \
../src/lua/src/lzio.c \
../src/lua/src/eris.c \
\
../src/luasocket/src/auxiliar.c \
../src/luasocket/src/buffer.c \
../src/luasocket/src/except.c \
../src/luasocket/src/inet.c \
../src/luasocket/src/io.c \
../src/luasocket/src/luasocket.c \
../src/luasocket/src/mime.c \
../src/luasocket/src/options.c \
../src/luasocket/src/select.c \
../src/luasocket/src/tcp.c \
../src/luasocket/src/timeout.c \
../src/luasocket/src/udp.c \
../src/luasocket/src/usocket.c \
../src/luasocket/src/unix.c \
\
../src/tms/core/atlas.c \
../src/tms/core/backend.c \
../src/tms/core/batch3d.c \
../src/tms/core/batch.c \
../src/tms/core/builtin-shaders.inc.c \
../src/tms/core/camera.c \
../src/tms/core/ddraw.c \
../src/tms/core/entity.c \
../src/tms/core/event.c \
../src/tms/core/framebuffer.c \
../src/tms/core/gbuffer.c \
../src/tms/core/graph.c \
../src/tms/core/hdrbuffer.c \
../src/tms/core/material.c \
../src/tms/core/mesh.c \
../src/tms/core/meshfactory.c \
../src/tms/core/model.c \
../src/tms/core/pipeline.c \
../src/tms/core/program.c \
../src/tms/core/scene.c \
../src/tms/core/screen.c \
../src/tms/core/shader.c \
../src/tms/core/surface.c \
../src/tms/core/texture.c \
../src/tms/core/tms.c \
../src/tms/core/varray.c \
../src/tms/core/wdg.c \
../src/tms/math/intersect.c \
../src/tms/math/lorenz.c \
../src/tms/math/math.c \
../src/tms/math/rk4.c \
../src/tms/util/hash.c \
../src/tms/util/list.c \
\
../src/tms/backends/screenshot-linux/main.cc \
../src/tms/bindings/cpp/cpp.cc \
../src/tms/modules/3ds/3ds.c \
\
../src/src/fluid.cc \
../src/src/oilrig.cc \
../src/src/factory.cc \
../src/src/timectrl.cc \
../src/src/egraph.cc \
../src/src/ball.cc \
../src/src/beam.cc \
../src/src/breadboard.cc \
../src/src/button.cc \
../src/src/cable.cc \
../src/src/command.cc \
../src/src/composable.cc \
../src/src/cup.cc \
../src/src/cylinder.cc \
../src/src/debugdraw.cc \
../src/src/edevice.cc \
../src/src/entity.cc \
../src/src/game.cc \
../src/src/game-message.cc \
../src/src/game-graph.cc \
../src/src/game-edit.cc \
../src/src/game-gui.cc \
../src/src/adventure.cc \
../src/src/gear.cc \
../src/src/magnet.cc \
../src/src/rack.cc \
../src/src/rail.cc \
../src/src/generator.cc \
../src/src/panel.cc \
../src/src/game-panel-edit.cc \
../src/src/gui.cc \
../src/src/goal.cc \
../src/src/group.cc \
../src/src/i0o1gate.cc \
../src/src/i1o1gate.cc \
../src/src/fxemitter.cc \
../src/src/i2o1gate.cc \
../src/src/backpack.cc \
../src/src/progress.cc \
../src/src/pkgwarp.cc \
../src/src/main.cc \
../src/src/material.cc \
../src/src/object_finder.cc \
../src/src/sincos.cc \
../src/src/eatan2.cc \
../src/src/pointer.cc \
../src/src/model.cc \
../src/src/object_factory.cc \
../src/src/soundmanager.cc \
../src/src/robot.cc \
../src/src/checkpoint.cc \
../src/src/rope.cc \
../src/src/connection.cc \
../src/src/settings.cc \
../src/src/shelf.cc \
../src/src/solver.cc \
../src/src/solver_ingame.cc \
../src/src/stabilizer.cc \
../src/src/sticky.cc \
../src/src/tester.cc \
../src/src/trampoline.cc \
../src/src/wheel.cc \
../src/src/wmotor.cc \
../src/src/motor.cc \
../src/src/lmotor.cc \
../src/src/magconn.cc \
../src/src/switch.cc \
../src/src/ledbuffer.cc \
../src/src/spritebuffer.cc \
../src/src/fluidbuffer.cc \
../src/src/linebuffer.cc \
../src/src/seesaw.cc \
../src/src/pivot.cc \
../src/src/gyroscope.cc \
../src/src/tiltmeter.cc \
../src/src/rocket.cc \
../src/src/ragdoll.cc \
../src/src/pkgman.cc \
../src/src/menu_shared.cc \
../src/src/menu-base.cc \
../src/src/menu_pkg.cc \
../src/src/menu_main.cc \
../src/src/menu_create.cc \
../src/src/menu-play.cc \
../src/src/simplebg.cc \
../src/src/world.cc \
../src/src/terrain.cc \
../src/src/chunk.cc \
../src/src/chunk_window.cc \
../src/src/chunk_preloader.cc \
../src/src/gentype.cc \
../src/src/noise.cc \
../src/src/rand.c \
../src/src/crc.cc \
../src/src/worker.cc \
../src/src/pipeline.cc \
../src/src/splank.cc \
../src/src/clip.cc \
../src/src/gearbox.cc \
../src/src/game-gearbox-edit.cc \
../src/src/ctrlmini.cc \
../src/src/ctrlservo.cc \
../src/src/battery.cc \
../src/src/ctrlfplus.cc \
../src/src/damper.cc \
../src/src/gameman.cc \
../src/src/ctrlpass.cc \
../src/src/box.cc \
../src/src/basepixel.cc \
../src/src/tpixel.cc \
../src/src/pixel.cc \
../src/src/ui.cc \
../src/src/rubberband.cc \
../src/src/loading_screen.cc \
../src/src/corner.cc \
../src/src/scanner.cc \
../src/src/proximitysensor.cc \
../src/src/ysplitter.cc \
../src/src/objectfield.cc \
../src/src/dragfield.cc \
../src/src/emitter.cc \
../src/src/explosive.cc \
../src/src/absorber.cc \
../src/src/conveyor.cc \
../src/src/resistor.cc \
../src/src/angulardamper.cc \
../src/src/impact_sensor.cc \
../src/src/gravityman.cc \
../src/src/speaker.cc \
../src/src/jumper.cc \
../src/src/spikes.cc \
../src/src/screenshot_marker.cc \
../src/src/receiver.cc \
../src/src/transmitter.cc \
../src/src/fan.cc \
../src/src/timer.cc \
../src/src/mini_transmitter.cc \
../src/src/robot_base.cc \
../src/src/spikebot.cc \
../src/src/companion.cc \
../src/src/bomber.cc \
../src/src/robot_parts.cc \
../src/src/lobber.cc \
../src/src/minibot.cc \
../src/src/angularvelmeter.cc \
../src/src/display.cc \
../src/src/velmeter.cc \
../src/src/weight.cc \
../src/src/prompt.cc \
../src/src/i2o0gate.cc \
../src/src/escript.cc \
../src/src/item.cc \
../src/src/crane.cc \
../src/src/robotman.cc \
../src/src/scup.cc \
../src/src/faction.cc \
../src/src/mood.cc \
../src/src/repair_station.cc \
../src/src/anchor.cc \
../src/src/ladder.cc \
../src/src/plant.cc \
../src/src/resource.cc \
../src/src/vendor.cc \
../src/src/creature.cc \
../src/src/animal.cc \
../src/src/soundman.cc \
../src/src/polygon.cc \
../src/src/textbuffer.cc \
../src/src/grid.cc \
../src/src/wplug.cc \
../src/src/cursorfield.cc \
../src/src/i1o0gate.cc \
../src/src/iomiscgate.cc \
../src/src/widget_manager.cc \
../src/src/font.cc \
../src/src/text.cc \
../src/src/pscreen.cc \
../src/src/misc.cc \
../src/src/levelman.cc \
../src/src/tiles.cc \
../src/src/activator.cc \
../src/src/treasure_chest.cc \
../src/src/decorations.cc \
\
../src/src/Box2D/Particle/b2Particle.cc \
../src/src/Box2D/Particle/b2ParticleGroup.cc \
../src/src/Box2D/Particle/b2ParticleSystem.cc \
../src/src/Box2D/Particle/b2VoronoiDiagram.cc \
../src/src/Box2D/Dynamics/b2Body.cc \
../src/src/Box2D/Dynamics/b2ContactManager.cc \
../src/src/Box2D/Dynamics/b2Fixture.cc \
../src/src/Box2D/Dynamics/b2Island.cc \
../src/src/Box2D/Dynamics/b2WorldCallbacks.cc \
../src/src/Box2D/Dynamics/b2World.cc \
../src/src/Box2D/Collision/b2BroadPhase.cc \
../src/src/Box2D/Collision/b2CollideCircle.cc \
../src/src/Box2D/Collision/b2CollideEdge.cc \
../src/src/Box2D/Collision/b2CollidePolygon.cc \
../src/src/Box2D/Collision/b2Collision.cc \
../src/src/Box2D/Collision/b2Distance.cc \
../src/src/Box2D/Collision/b2DynamicTree.cc \
../src/src/Box2D/Collision/b2TimeOfImpact.cc \
../src/src/Box2D/Collision/Shapes/b2ChainShape.cc \
../src/src/Box2D/Collision/Shapes/b2CircleShape.cc \
../src/src/Box2D/Collision/Shapes/b2EdgeShape.cc \
../src/src/Box2D/Collision/Shapes/b2PolygonShape.cc \
../src/src/Box2D/Common/b2BlockAllocator.cc \
../src/src/Box2D/Common/b2Draw.cc \
../src/src/Box2D/Common/b2Math.cc \
../src/src/Box2D/Common/b2Settings.cc \
../src/src/Box2D/Common/b2StackAllocator.cc \
../src/src/Box2D/Common/b2Timer.cc \
../src/src/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2CircleContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2Contact.cc \
../src/src/Box2D/Dynamics/Contacts/b2ContactSolver.cc \
../src/src/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cc \
../src/src/Box2D/Dynamics/Contacts/b2PolygonContact.cc \
../src/src/Box2D/Dynamics/Joints/b2DistanceJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2FrictionJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2GearJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2Joint.cc \
../src/src/Box2D/Dynamics/Joints/b2MotorJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2MouseJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2PrismaticJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2PulleyJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2RevoluteJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2PivotJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2RopeJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2WeldJoint.cc \
../src/src/Box2D/Dynamics/Joints/b2WheelJoint.cc
